--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -57,21 +57,13 @@ development:
     https: false
     host: localhost
     port: 3035
-    public: localhost:3035
+    public: 0.0.0.0:3035
     hmr: false
     # Inline should be set to true if using HMR
-    inline: true
+    inline: false
     overlay: true
-    compress: true
     disable_host_check: true
     use_local_ip: false
-    quiet: false
-    pretty: false
-    headers:
-      'Access-Control-Allow-Origin': '*'
-    watch_options:
-      ignored: '**/node_modules/**'
-
 
 test:
   <<: *default
